[RED] Update Tests for Kupon's New Attribute (Nama Kupon)